--- a/parkingslot/src/main/resources/application.properties
+++ b/parkingslot/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=parkingslot
 #DB Connections
 spring.datasource.url=jdbc:mysql://localhost:3306/parkingslotdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=0000
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
